k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-fastapi-azure
  namespace: sandbox-e2e-fastapi-azure
  labels:
    app: e2e-fastapi-azure
    tenant: mastercard
spec:
  type: ClusterIP
  selector:
    app: e2e-fastapi-azure
  ports:
    - name: http
      port: 80
      targetPort: 8000
